--- a/index.html
+++ b/index.html
@@ -180,10 +180,8 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <!-- <p class="lead fw-light mb-4">My name is Aman Khan .</p> -->
-                                <p class="text-muted">Hello, I'm Aman Khan, an accomplished Python Developer with a solid two years of professional experience in creating efficient and elegant software solutions. My journey in the world of programming began with a passion for crafting innovative solutions, and over the years, I've honed my skills to become a reliable developer capable of delivering exceptional results.
-
-                                    Professional Expertise:
-                                    During my two-year journey as a Python Developer, I've had the privilege to work on a diverse range of projects that have enriched my skill set and expanded my horizons. My primary focus has been on developing backend systems, web applications, and automation tools, all powered by the versatility and simplicity of the Python programming language.</p>
+                                <p class="text-muted"> <b> Hello, I'm Aman Khan, an accomplished Python Developer with a solid two years of professional experience in creating efficient and elegant software solutions. My journey in the world of programming began with a passion for crafting innovative solutions, and over the years, I've honed my skills to become a reliable developer capable of delivering exceptional results.Professional Expertise:
+                                    During my two-year journey as a Python Developer, I've had the privilege to work on a diverse range of projects that have enriched my skill set and expanded my horizons. My primary focus has been on developing backend systems, web applications, and automation tools, all powered by the versatility and simplicity of the Python programming language . </b></p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
                                     <a class="text-gradient" href="https://www.linkedin.com/in/aman-khan-67a6a6194"><i class="bi bi-linkedin"></i></a>
